--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,18 @@ header {
     object-fit: cover; /* Ensures the image is cropped to cover the entire container */
 }
 
+@media screen and (max-width: 768px) {
+    .profile-container {
+        height: 50vh; /* Adjust height for smaller screens */
+    }
+
+    .profile-image {
+        width: 350px; /* Smaller width for smaller screens */
+        height: 350px; /* Smaller height for smaller screens */
+    }
+}
+
+
 @media screen and (max-width: 480px) {
     .profile-container {
         height: 30vh; /* Adjust height for very small screens */
