--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,16 @@ header {
     object-fit: cover; /* Ensures the image is cropped to cover the entire container */
 }
 
+@media screen and (max-width: 710px) {
+    .profile-container {
+        height: 40vh; /* Adjust height for very small screens */
+    }
+
+    .profile-image {
+        width: 150px; /* Smaller width for very small screens */
+        height: 150px; /* Smaller height for very small screens */
+    }
+}
 
 /* Main section styles */
 main {
