--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ header {
 .profile-image {
     position: relative;
     z-index: 1;
-    width: 355px;
-    height: 355px;
+    width: 350px;
+    height: 350px;
     overflow: hidden;
     border-radius: 50%; /* Ensures the container is perfectly circular */
 }
@@ -188,15 +188,15 @@ p {
 }
 
 .skill {
-    flex: 0 0 22.33%; /* Three skills per row */
+    flex: 0 0 17%; /* Slightly reduced width to decrease box size from the right side */
     padding: 10px;
     box-sizing: border-box;
-    border: 2px solid #3498db; /* Border color */
-    border-radius: 30px; /* Rounded corners */
-    padding: 20px; /* Padding inside the box */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Box shadow for depth */
-    margin-bottom: 15px;
-    margin-right: 15px;
+    border: 3px solid #3498db; /* Border color */
+    border-radius: 25px; /* Rounded corners */
+    padding: 15px; /* Padding inside the box */
+    box-shadow: 0 13px 10px rgba(0, 0, 0, 0.1); /* Box shadow for depth */
+    margin-bottom: 25px;
+    margin-right: 13px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -208,12 +208,25 @@ p {
 .skill img {
     width: 50px;  /*Adjust image size as needed*/ 
     height: 50px;
-    margin-bottom: 10px;
+    margin-top: 2px;
+    margin-bottom: 1px;
 }
 
 .skill-info {
     text-align: left;
+    margin-bottom: 1px;
+    margin-right: 10px;
 }
+
+.skill-info h2 {
+  margin-top: 0px;
+  margin-bottom: -10px;
+}
+
+.skill-info p {
+  margin-top: 10px;
+}
+
 
 @media screen and (max-width: 768px) {
     .skill {
