--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ header {
     text-align: center;
     position: relative;
 }
+header h1 {
+  margin-bottom: 10px;
+}
+
 
 .navbar {
     display: flex;
@@ -67,6 +71,17 @@ header {
 
 .nav-list li a:hover {
     background-color: #2980b9;
+}
+
+.welcome {
+    padding: 20px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.welcome h2 {
+  color: #2ecc71;
+    margin-top: 0;
 }
 
 .projects-details-section {
@@ -148,13 +163,13 @@ header {
 }
 
 /* Style for section titles within the project */
-.skills h3, .role h3, .overview h3, .duration h3, .challenges h3, .client-team h3, .screenshot h3 {
+.skills h3, .role h3, .overview h3, .duration h3, .challenges h3, .client-team h3, .screenshot h3, .achievements h3 {
     margin-bottom: 10px; /* Space below section titles */
     color: #2ecc71; /* Red color for section titles */
 }
 
 /* Style for section text paragraphs */
-.skills p, .role p, .overview p, .duration p, .challenges p, .client-team p {
+.skills p, .role p, .overview p, .duration p, .challenges p, .client-team p, .achievements li{
     color: black; /* Dark color for section text */
     font-weight: normal;
 }
@@ -172,7 +187,7 @@ header {
     margin: 5px; /* Space between skill items */
     padding: 5px 10px; /* Padding inside each skill item */
     border-radius: 15px; /* Rounded corners for skill items */
-    color: #00796b; /* Dark teal color for text */
+    color: #e67e22; /* Dark teal color for text */
     font-size: 14px; /* Font size for skill items */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for skill items */
     font-weight: bold;
