--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ header h1 {
 
 .projects-details-section {
   padding: 20px;
-  max-width: 1200px;
+  max-width: 1250px;
   margin: 0 auto;
 }
 
@@ -261,18 +261,24 @@ header h1 {
     font-size: 12px; /* Smaller font size for smaller screens */
   }
 
-  .screenshot img {
-    max-width: 100%; /* Ensure images fit within the viewport on smaller screens */
-  }
-}
-.screenshot iframe {
-            width: 100%;
-            height: 80vh; /* 80% of the viewport height */
-            border: none; /* Remove default iframe border */
+  .screenshot {
+            flex: 1 1 45%; /* Two items will fit in one row on larger screens */
+            margin: 10px;
+        }
+
+        .screenshot img {
+            max-width: 100%; /* Ensure images fit within the viewport on smaller screens */
+            height: auto;
         }
 
         @media (max-width: 600px) {
-            .screenshot iframe {
-                height: 60vh; /* Adjust height for smaller screens */
+            .screenshot {
+                flex-direction: column; /* Stack items vertically on smaller screens */
             }
-        }
+
+            .screenshot {
+                flex: 1 1 100%; /* Each item will take full width on smaller screens */
+                margin: 5px 0;
+            }
+          
+          
