--- a/styles.css
+++ b/styles.css
@@ -42,19 +42,19 @@ header h1 {
   padding: 0;
   display: none;
   position: absolute;
-  background-color: #3498db;
+  background-color: #2ecc71 /*#3498db*/;
   border-radius: 5px;
   top: 50px;
   right: auto;
   left: 50%;
   transform: translateX(-50%);
-  width: 400px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 350px;
+  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.2);
   text-align: left;
 }
 
 .nav-list li {
-  border-bottom: 1px solid #2980b9;
+  border-bottom: 1px solid #3498db  /*#2980b9*/;
 }
 
 .nav-list li:last-child {
